# Phosphene

./: Cargo.toml  install.sh  test_gui.sh  test_script.sh  viridis.rs
kde/: phosphene.desktop
nautilus/: phosphene.py
nemo/: phosphene.nemo_action
src/: cache.rs  cli.rs  cli_runner.rs  config.rs  gui.rs  main.rs  render.rs
